--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul> 
+                <li>Home</li>
+                <li>Profile</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <h1>Title</h1>
+    </header>
+    <section>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+    </section>
+    <section>Demo</section>
+    <footer>Footer</footer>
 </body>
 </html>
