--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
         <nav>
             <ul> 
-                <li>Home</li>
+                <li><a href="basic.html">Home</a></li>
                 <li>Profile</li>
                 <li>Contact</li>
             </ul>
