--- a/Profile/profileIndex.html
+++ b/Profile/profileIndex.html
@@ -9,7 +9,7 @@
         <nav>
             <ul> 
                 <li><a href="index.html">Home</a></li>
-                <li>Profile</li>
+                <li><a href=""></a></li>
                 <li>Contact</li>
             </ul>
         </nav>
