--- a/Profile/profileIndex.html
+++ b/Profile/profileIndex.html
@@ -8,9 +8,9 @@
     <header>
         <nav>
             <ul> 
-                <li><a href="index.html">Home</a></li>
-                <li><a href=""></a></li>
-                <li>Contact</li>
+                <li><a href="homeIndex.html">Home</a></li>
+                <li><a href="profileIndex.html">Profile</a></li>
+                <li><a href="contactIndex.html">Contact</a></li>
             </ul>
         </nav>
         <h1>Title</h1>
