--- a/Profile/profileIndex.html
+++ b/Profile/profileIndex.html
@@ -13,7 +13,7 @@
                 <li><a href="contactIndex.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Title</h1>
+        <h1>Profile</h1>
     </header>
     <section>
         <div>1</div>
