--- a/Home/homeIndex.html
+++ b/Home/homeIndex.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nicole's Catalog</title>
+    <link rel="stylesheet" href="stles.css">
 </head>
 <body>
     <header>
