--- a/Home/home.html
+++ b/Home/home.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul> 
-                <li><a href="homeIndex.html">Home</a></li>
-                <li><a href="profileIndex.html">Profile</a></li>
-                <li><a href="contactIndex.html">Contact</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <h1>Home</h1>
