--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -8,9 +8,9 @@
     <header>
         <nav>
             <ul> 
-                <li><a href="homeIndex.html">Home</a></li>
-                <li><a href="profileIndex.html">Profile</a></li>
-                <li><a href="contactIndex.html">Contact</a></li>
+                <li><a href="../Home/home.html">Home</a></li>
+                <li><a href="../Profile/profile.html">Profile</a></li>
+                <li><a href="../Contacts/contact.html">Contact</a></li>
             </ul>
         </nav>
         <h1>Profile</h1>
