--- a/Home/home.html
+++ b/Home/home.html
@@ -9,9 +9,11 @@
     <header>
         <nav>
             <ul> 
-                <li><a href="../Home/home.html">Home</a></li>
-                <li><a href="../Profile/profile.html">Profile</a></li>
-                <li><a href="../Contacts/contact.html">Contact</a></li>
+                <div class="grid"> 
+                    <li><a href="../Home/home.html">Home</a></li>
+                    <li><a href="../Profile/profile.html">Profile</a></li>
+                    <li><a href="../Contacts/contact.html">Contact</a></li>
+                </div>
             </ul>
         </nav>
         <h1>Home</h1>
