--- a/Home/home.html
+++ b/Home/home.html
@@ -9,10 +9,10 @@
     <header>
         <nav>
             <ul> 
-                <div class="grid"> 
-                    <li><a href="../Home/home.html">Home</a></li>
-                    <li><a href="../Profile/profile.html">Profile</a></li>
-                    <li><a href="../Contacts/contact.html">Contact</a></li>
+                <div class="navbar"> 
+                    <a href="../Home/home.html">Home</a>
+                    <a href="../Profile/profile.html">Profile</a>
+                    <a href="../Contacts/contact.html">Contact</a>
                 </div>
             </ul>
         </nav>
