--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -9,9 +9,11 @@
     <header>
         <nav>
             <ul> 
-                <li><a href="../Home/home.html">Home</a></li>
-                <li><a href="../Profile/profile.html">Profile</a></li>
-                <li><a href="../Contacts/contact.html">Contact</a></li>
+                <div class="navbar"> 
+                    <a href="../Home/home.html">Home</a>
+                    <a href="../Profile/profile.html">Profile</a>
+                    <a href="../Contacts/contact.html">Contact</a>
+                </div>
             </ul>
         </nav>
         <h1>Profile</h1>
