--- a/Home/home.html
+++ b/Home/home.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src=""
+            <img src="../Images/Logo.jpeg" class="logo">
            
         </div>
             </div>
