--- a/Home/home.html
+++ b/Home/home.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nicole's Book Site</title>
+    <title>Nicole's News Update</title>
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <button class="btn"><a href="">LOGIN</a></button>
         </div>
         <div class="content">
-            <h1>Nicole's Book Site</h1>
+            <h1>Nicole's News Update</h1>
             <button class="btn"><a href="">SUBSCRIBE</a></button>
             <button class="btn"><a href="">EXPLORE</a></button>
         </div>
