--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -2,28 +2,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Nicole's News Update</title>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul> 
-                <div class="navbar"> 
-                    <a href="../Home/home.html">Home</a>
-                    <a href="../Profile/profile.html">Profile</a>
-                    <a href="../Contacts/contact.html">Contact</a>
-                </div>
-            </ul>
-        </nav>
-        <h1>Contact</h1>
-    </header>
-    <section>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-    </section>
-    <section>Demo</section>
-    <footer>Footer</footer>
-</body>
-</html>
+    <div class="container">
+        <div class="header">
+            <img src="../Images/Logo.jpeg" class="logo">
+            <div class="navbar"> 
+                <a href="../Home/home.html">Home</a>
+                <a href="../Profile/profile.html">Profile</a>
+                <a href="../Contacts/contact.html">Contact</a>
+            </div>
+                <button class="btn"><a href="">LOGIN</a></button>
+        </div>
+        <div class="content">
+            <h1>Nicole's News Update</h1>
+            <button class="btn"><a href="">SUBSCRIBE</a></button>
+            <button class="btn"><a href="">EXPLORE</a></button>
+        </div>
+        </div>
+    </body>
+    </html>
