--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -8,7 +8,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="../Images/Logo.jpeg" class="logo">
+            <!-- <img src="../Images/Logo.jpeg" class="logo"> -->
             <div class="navbar"> 
                 <a href="../Home/home.html">Home</a>
                 <a href="../Profile/profile.html">Profile</a>
