--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicole's News Update</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="profile.css">
 </head>
 <body>
     <div class="container">
