--- a/Home/home.html
+++ b/Home/home.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicole's News Update</title>
     <link rel="stylesheet" href="home.css">
+    <script defer src="indexHome.js"></script>
 </head>
 <body>
     <div class="container">
