--- a/Home/home.html
+++ b/Home/home.html
@@ -20,6 +20,8 @@
         <div class="grid"></div>
         <div class="content">
             <h1>Home</h1>
+            <div id="output"></div>
+            <p
             <button class="btn"><a href="">LOGIN</a></button>
             <button class="btn"><a href="">SUBSCRIBE</a></button>
             <button class="btn"><a href="">EXPLORE</a></button>
