Getting Elements By ID

--- a/Home/home.html
+++ b/Home/home.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="home.css">
     <script defer src="indexHome.js"></script>
 </head>
+<button onclick='getnews()'>Get News</button>
+<div id="output"></div>
 <body>
     <div class="container">
         <div class="header">
