--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -25,6 +25,23 @@
             <button class="btn"><a href="">EXPLORE</a></button>
         </div>
         </div>
+        <section class="container">
+            <form id="book-form">
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" id="name"/>
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="text" id="email"/>
+                </div>
+                <div>
+                    <label for="comment">Comment</label>
+                    <input type="number" id="comment"/>
+                </div>
+                </form>
+        </section>
+
     </body>
     </html>
 
