--- a/Home/home.html
+++ b/Home/home.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="home.css">
     <script defer src="indexHome.js"></script>
 </head>
-<button onclick= "">Get News</button>
+<button onclick= "btn">Get News</button>
 <div id="output"></div>
 <body>
     <div class="container">
