--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -26,7 +26,7 @@
         </div>
         </div>
         <section class="container">
-            <form id="book-form">
+            <form id="form">
                 <div>
                     <label for="name">Name</label>
                     <input type="text" id="name"/>
