--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -25,7 +25,8 @@
             <button class="btn"><a href="">EXPLORE</a></button>
         </div>
         </div>
-        <section class="container">
+        <section class="table">
+            <section class="table-section">
             <form id="form">
                 <div>
                     <label for="name">Name</label>
@@ -38,8 +39,10 @@
                 <div>
                     <label for="comment">Comment</label>
                     <input type="number" id="comment"/>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
                 </form>
+            </section>
         </section>
 
     </body>
