--- a/Home/home.html
+++ b/Home/home.html
@@ -1,24 +1,25 @@
 <html lang="en">
 <head>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand">Navbar</a>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicole's News Update</title>
     <link rel="stylesheet" href="home.css">
     <script defer src="indexHome.js"></script>
 </head>
-<nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand">Navbar</a>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-<button onclick= "btn">Get News</button>
+
+<button class= "btn">Get News</button>
 <div id="output"></div>
 <body>
-    <div class="container">
+<div class="container">
         <div class="header">
           
             <div class="navbar"> 
