--- a/Home/home.html
+++ b/Home/home.html
@@ -7,7 +7,54 @@
     <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="m-0 p-0">
+    <div class="container fluid">
+        <div>
+            <!-- navbar -->
+            <div>
+                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                    <div class="container-fluid">
+                      <a class="navbar-brand text-warning" href="#">News</a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#general" id="general">General News</a>
+                              </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#business" id="business">Business</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#sports" id="sports">Sports</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#technology" id="technology">Technology</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
+                          </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                          <input class="form-control me-2" type="search" placeholder="Search News" >
+                          <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
+                      </div>
+                    </div>
+                  </nav>
+            </div>
+
+             <!-- News -->
+             <div></div>
+
+             <!-- footer -->
+             <div></div>
+
+        </div> 
+
+
+    </div>
     <h1>Nicole's News Update</h1>
 
 
