--- a/Home/home.html
+++ b/Home/home.html
@@ -12,7 +12,7 @@
         <div>
             <!-- navbar -->
             <div>
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <div class="container-fluid">
                       <a class="navbar-brand text-warning" href="#">News</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,9 +36,9 @@
                             <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
                           </li>
                         </ul>
-                        <form class="d-flex" role="search">
+                        <form class="d-flex">
                           <input class="form-control me-2" type="search" placeholder="Search News" >
-                          <button class="btn btn-outline-success" type="submit">Search</button>
+                          <button class="btn btn-outline-warning" type="button">Search</button>
                         </form>
                       </div>
                     </div>
