--- a/Home/home.html
+++ b/Home/home.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Nicole's News Update</title>
     <link rel="stylesheet" href="home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body class="m-0 p-0">
-    <div class="container fluid">
+    <div class="container fluid m-0 p-0">
         <div>
             <!-- navbar -->
             <div>
@@ -21,16 +21,16 @@
                       <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#general" id="general">General News</a>
+                                <a class="nav-link" aria-current="page" href="#general" id="general">General News</a>
                               </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#business" id="business">Business</a>
+                            <a class="nav-link" aria-current="page" href="#business" id="business">Business</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#sports" id="sports">Sports</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#technology" id="technology">Technology</a>
+                            <a class="nav-link" aria-current="page" href="#technology" id="technology">Technology</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
@@ -49,7 +49,15 @@
              <div></div>
 
              <!-- footer -->
-             <div></div>
+             <div>
+                <div>
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                      <div class="container-fluid">
+                        <a class="navbar-brand" href="#">Navbar</a>
+                      </div>
+                    </nav>
+                  </div>
+             </div>
 
         </div> 
 
