--- a/Home/home.html
+++ b/Home/home.html
@@ -37,8 +37,8 @@
                           </li>
                         </ul>
                         <form class="d-flex">
-                          <input class="form-control me-2" type="search" placeholder="Search News" >
-                          <button class="btn btn-outline-warning" type="button">Search</button>
+                          <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search News" >
+                          <button class="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
                         </form>
                       </div>
                     </div>
@@ -46,14 +46,19 @@
             </div>
 
              <!-- News -->
-             <div></div>
+             <div>
+                <div class="row" id="newsType"></div>
+                <div class="row" id="newsdetails">
+
+                </div>
+             </div>
 
              <!-- footer -->
              <div>
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                       <div class="container-fluid">
-                        <a class="navbar-brand" href="#">Navbar</a>
+                        <h5 class="text-white me-auto ms-auto">Nicole<span class="text-warning">Slater</span></h5>
                       </div>
                     </nav>
                   </div>
