--- a/Home/home.html
+++ b/Home/home.html
@@ -58,7 +58,7 @@
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                       <div class="container-fluid">
-                        <h5 class="text-white me-auto ms-auto">Nicole<span class="text-warning">Slater</span></h5>
+                        <h5 class="text-white me-auto ms-auto">News<span class="text-warning">Update</span></h5>
                       </div>
                     </nav>
                   </div>
