Styling with CSS

--- a/Home/home.html
+++ b/Home/home.html
@@ -47,14 +47,14 @@
 
              <!-- News -->
              <div>
-                <div class="row" id="newsType"></div>
-                <div class="row" id="newsdetails">
+                <div class="row m-3" id="newsType"></div>
+                <div class="row me-2 ms-2" id="newsdetails">
 
                 </div>
              </div>
 
              <!-- footer -->
-             <div>
+             <div class="mt-5">
                 <div>
                     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                       <div class="container-fluid">
