--- a/Home/home.html
+++ b/Home/home.html
@@ -8,6 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
   <body class="m-0 p-0">
+    <div class="container">
+        <div class="header">
+          
+            <div class="navbar"> 
+                <a href="../Home/home.html">Home</a>
+                <a href="../Profile/profile.html">Profile</a>
+                <a href="../Contacts/contact.html">Contact</a>
+            </div>
+               
+        </div>
+    </div>
     <div class="container fluid m-0 p-0">
         <div>
             <!-- navbar -->
