--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -52,6 +52,9 @@
                 </div>
             </div>
             <div class="gender-details">
+                <input type="radio" name="gender" id="dot-1">
+                <input type="radio" name="gender" id="dot-1">
+                <input type="radio" name="gender" id="dot-1">
                 <span class="gender-title">Gender</span>
                 <div class="category">
                     <label for="">
