Styling the Registration Form

--- a/Home/home.html
+++ b/Home/home.html
@@ -23,9 +23,9 @@
         <div>
             <!-- navbar -->
             <div>
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <nav class="navbar navbar-expand-lg  style="background-color:#9b59b6;>
                     <div class="container-fluid">
-                      <a class="navbar-brand text-warning" href="#">News</a>
+                      <a class="navbar-brand text-dark" href="#">News</a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -49,7 +49,7 @@
                         </ul>
                         <form class="d-flex">
                           <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search News" >
-                          <button class="btn btn-outline-warning" type="button" id="searchBtn">Search</button>
+                          <button class="btn btn-outline-dark" type="button" id="searchBtn">Search</button>
                         </form>
                       </div>
                     </div>
@@ -67,9 +67,9 @@
              <!-- footer -->
              <div class="mt-5">
                 <div>
-                    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <nav class="navbar navbar-expand-lg style="background-color:#9b59b6">
                       <div class="container-fluid">
-                        <h5 class="text-white me-auto ms-auto">News<span class="text-warning">Update</span></h5>
+                        <h5 class="text-dark me-auto ms-auto">News<span class="text-dark">Update</span></h5>
                       </div>
                     </nav>
                   </div>
