--- a/Home/home.html
+++ b/Home/home.html
@@ -26,10 +26,11 @@
                 <nav class="navbar navbar-expand-lg  style="background-color:#9b59b6;>
                     <div class="container-fluid">
                       <a class="navbar-brand text-dark" href="#">News</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <!-- me-auto mb-2 mb-lg-0 -->
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="#general" id="general">General News</a>
@@ -41,14 +42,14 @@
                             <a class="nav-link" href="#sports" id="sports">Sports</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#technology" id="technology">Technology</a>
+                            <a class="nav-link active" aria-current="page" href="#technology" id="technology">Technology</a>
                           </li>
                           <li class="nav-item">
                             <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
                           </li>
                         </ul>
                         <form class="d-flex">
-                          <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search News" >
+                          <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search">
                           <button class="btn btn-outline-dark" type="button" id="searchBtn">Search</button>
                         </form>
                       </div>
