--- a/Home/home.html
+++ b/Home/home.html
@@ -26,7 +26,7 @@
                 <nav class="navbar navbar-expand-lg  style="background-color:#9b59b6;>
                     <div class="container-fluid">
                       <a class="navbar-brand text-dark" href="#">News</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
                       <div class="collapse navbar-collapse" id="navbarNav">
@@ -48,10 +48,12 @@
                             <a class="nav-link" href="#entertainment" id="entertainment">Entertainment</a>
                           </li>
                         </ul>
+                        <h4> 
                         <form class="d-flex">
                           <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search">
                           <button class="btn btn-outline-dark" type="button" id="searchBtn">Search</button>
                         </form>
+                        </h4>
                       </div>
                     </div>
                   </nav>
