Finishing touches to CSS

--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicole's News Update</title>
     <link rel="stylesheet" href="contact.css">
-    <script defer src="contact.js"></script>
+    <script defer src="indexHome.js"></script>
     
 </head>
 
