--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nicole's News Update</title>
     <link rel="stylesheet" href="profile.css">
-    <script defer src="profile.js"></script>
+    <script defer src="indexHome.js"></script>
     
 </head>
 <body>
