Last Minute Changes

--- a/Home/home.html
+++ b/Home/home.html
@@ -50,10 +50,10 @@
                           </li>
                         </ul>
                         <h4> 
-                        <form class="d-flex">
+                        <!-- <form class="d-flex">
                           <input class="form-control me-2" type="text" id="newsQuery" placeholder="Search">
                           <button class="btn btn-outline-dark" type="button" id="searchBtn">Search</button>
-                        </form>
+                        </form> -->
                         </h4>
                       </div>
                     </div>
