--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -26,7 +26,7 @@
                 <p>We would love to hear your feedback. Fill out the form below at your earliest convenicence.</p>
                 <div class="contact-box">
                     <div class="contact-left">
-                        <h3> Send Your Request</h3>
+                        <h3> Send Your Thoughts</h3>
                         <form>
                             <div class="input-row">
                                 <div class="input-group">
@@ -38,11 +38,33 @@
                                         <label>Email</label>
                                         <input type="email" placeholder="Enter Email">
                                     </div>
+                                </div>
+                                <div class="input-row">
+                                    <div class="input-group">
+                                        <label>Subject</label>
+                                        <input type="text" placeholder="Enter Subject">
+                                    </div>
+                                </div>
+                                <label>Comments</label>
+                                <textarea rows="5" placeholder="Please Enter Comments Here"></textarea>
+                                <button type="submit">Send</button>
                             </div>
                         </form>
+                        
                     </div>
                     <div class="contact-right">
-                        <h3> Let Us Know</h3>
+                        <h3>Contact Details</h3>
+                        <table>
+                            <tr>
+                                <td>Name:</td>
+                                <td>Nicole Slater</td>
+                            </tr>
+                            <tr>
+                                <td>Email:</td>
+                                <td>nicoleslater@pursuit.org</td>
+                            </tr>
+                          
+                        </table>
                     </div>
                 </div>
             </div>
