Finishing Touches in CSS

--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -23,7 +23,8 @@
         <div>
             <div class="container">
                 <h1>Contact Us</h1>
-                <p>We would love to hear your feedback. Fill out the form below at your earliest convenicence.</p>
+                <p>We would love to hear your feedback.</p>
+                <p>Fill out the form below.</p>
                 <div class="contact-box">
                     <div class="contact-left">
                         <h3> Send Your Thoughts</h3>
