--- a/Home/home.html
+++ b/Home/home.html
@@ -83,7 +83,16 @@
 
 
     </div>
-    <h1>Home Page</h1>
+    <h1>Synopsis</h1>
+    <p> Hello!</p>
+
+  <p> Welcome to my News Update Website!</p>
+  <p> This website will show you the current articles from the categories: General News, Business, Sports, Technology and Entertainment!</p>
+  <p> If you would like to receive email updates on the latest Headlines please follow the Profile link and fill out the Registration form.</p>
+  <p> The content creator would appreciate any comments or feedback! Please follow the contact link and fill out the form.</p>
+  <p> Thank you and Please Enjoy!</p>
+
+
 
 
 
