--- a/Home/home.html
+++ b/Home/home.html
@@ -8,6 +8,12 @@
     <script defer src="indexHome.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   </head>
+
+
+   <form action="https://www.google.com/search" method="GET">
+    <input type="text" name="q" placeholder="Google Search"
+    <input type="submit" value="Google Search">
+  </form>
   <body class="m-0 p-0">
     <div class="container">
         <div class="header">
