Customizing Google Search Bar

--- a/Home/home.html
+++ b/Home/home.html
@@ -11,9 +11,12 @@
 
 
    <form action="https://www.google.com/search" method="GET">
-    <input type="text" name="q" placeholder="Google Search"
-    <input type="submit" value="Google Search">
+    <input type="text" name="q" placeholder="Google Search">
+    <div  class="button">
+        <input type="submit" value="Submit">
+    </div> 
   </form>
+
   <body class="m-0 p-0">
     <div class="container">
         <div class="header">
