--- a/Contacts/contact.html
+++ b/Contacts/contact.html
@@ -13,7 +13,7 @@
         <div class="header">
           
             <div class="navbar"> 
-                <a href="../Home/home.html">Home</a>
+                <a href="../Home/index.html">Home</a>
                 <a href="../Profile/profile.html">Profile</a>
                 <a href="../Contacts/contact.html">Contact</a>
             </div>
